# ABIDES-Configuration-Generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  configgen.py  diagnostic_test.py  docker-compose.yml  pyproject.toml  requirements.txt  test_windows_ci.py  verify_deps.py  verify_deps_simple.py
.github/workflows/: ci-cd.yml
docs/: examples.md  project_structure.md
examples/: README.md  agent_examples.py  cli_usage_examples.py  template_examples.py
